# SolidWorksTools

./: .gitignore  README.md  update.bat
SW2024-05-2STEP/: README.md  build.bat  install.py  pyproject.toml  release.bat  requirements.txt  setup.bat  sw2step.spec
SW2024-05-2STEP/src/: __main__.py  converter.py  gui.py
